# unixbar

./: Cargo.toml
src/: lib.rs
src/format/: data.rs  i3bar.rs
src/widget/: base.rs  bspwm.rs  datetime.rs  delayed.rs  periodic.rs  text.rs  wrap.rs  xkb.rs
src/widget/music/: mod.rs  mpd.rs  mpris.rs
src/widget/volume/: alsa.rs  freebsd.rs  mod.rs
