[package]
name = "unixbar"
version = "0.1.3"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Desktop", "X11" ]
description = "unixbar"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/unixbar"
repository = "https://github.com/myfreeweb/unixbar"
build = "build.rs"
edition = "2018"

[features]
default = ["systemstat", "xkb", "dbus"]
xkb = ["xcb", "pkg-config"]

[build-dependencies]
pkg-config = { version = "0.3.17", optional = true }

[dependencies]
chrono = "0.4.10"
nom = "5.1.0"
systemstat = { version = "0.1.5", optional = true }
xcb = { version = "0.9.0", features = ["xkb"], optional = true }
serde = "1.0.104"
serde_json = "1.0.45"
serde_derive = "1.0.104"
dbus = { version = "0.8.1", optional = true }
libc = "0.2.66"
crossbeam-channel = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.4.1"
